[package]
name = "us-sms-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = { version = "4.4" }
serde = { version = "1.0.228", features = ["derive"] }
redis = { version = "1.0.2", default-features = false, features = [
    "tokio-comp",
    "aio",
    "connection-manager",
] }
dotenvy = "0.15"
orion = "0.17.12"